[package]
name = "helloworld"
version = "0.1.0"
authors = ["flo <eridio>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
pbkdf2 = "0.8.0"
rand_core = { version = "0.6", features = ["std"] }
wasm-bindgen = "0.2.67"
getrandom = { version = "0.2", features = ["js"] }
p256 = {version = "0.9.0", features = ["zeroize", "ecdsa", "ecdh", "arithmetic", "pem"]}
sha2 = "0.9.5"
hkdf = "0.11.0"
serde = {version = "1.0.126", optional = true}
bincode = {version = "1.3.3", optional = true}
serde_json="*"
serde_bytes = {version = "0.11.5", optional = true}


[dev-dependencies]
crossbeam-deque = "0.8.1"
crossbeam-epoch = "0.9.5"
criterion = "0.3.5"


[features]
default = ["bytes"]
bytes = ["serde/derive", "serde", "bincode", "serde_bytes"]
wasm = ["getrandom/js"]